Change photos, add new table style, correct layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,90 +1,92 @@
-/*font-family: 'Gentium Book Basic', serif;
-font-family: 'Covered By Your Grace', cursive;
-font-family: 'Caveat Brush', cursive; */
-
 body {
   font-family: sans-serif;
-  background-color: #E2E2D5;
-}
-
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-
-.container {
-  display: flex;
+  background: #7EBDE1; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#7EBDE1, #3E8CCB); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#7EBDE1, #3E8CCB); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#7EBDE1, #3E8CCB); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#7EBDE1, #3E8CCB); /* Standard syntax (must be last) */
 }
 
 .main {
   border-radius: 50px;
-  margin: 20px 20px 20px 20px;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 100px;
+  left: 100px;
   border: #077187 solid 3px;
-}
-
-.nav {
-  margin-bottom: 20px;
-  overflow: auto;
-}
-
-.nav a {
-  color: #077187;
-  text-decoration: none;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-.box-left {
-  float: left;
-  width: 55%;
-  border: 2px black solid;
-  overflow: auto;
-  box-sizing: border-box;
-}
-
-.box-right {
-  float: left;
-  width: 40%;
-  border: 2px black solid;
-  overflow: auto;
-  box-sizing: border-box;
-}
-
-.text {
-  margin-top: 50px;
-  display: flex;
-  overflow: auto;
-}
-
-table {
-  border: #4D6C43 1px solid;
-  margin-bottom: 20px;
-}
-
-th {
-  background-color: #302747;
-  color: ivory;
-  padding: 10px;
-  display: flex;
-  border-collapse: collapse;
 }
 
 .splash {
   position: relative;
-  text-align: right;
-  left: 220px;
-  top: 30px;
-  width: 400px;
+  left: 15px;
+  top: -30px;
+  width: 500px;
   height: 200px;
-  font-family: 'Caveat Brush', cursive;
-  color: #074F57;
-  font-weight: 300;
-  font-size: 80px;
+  font-family: 'Caveat', cursive;
+  color: #0E191F;
+  font-weight: bold;
+  font-size: 100px;
   line-height: 1em;
+}
+
+h2 {
+  font-family: 'Caveat Brush', cursive;
+  color: #0f594e;
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
+}
+
+h3 {
+  font-family: 'Caveat Brush', cursive;
+  color: #0f594e;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.top {
+  display: inline-flex;
+  box-sizing: border-box;
+
+}
+
+.top:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.nav {
+  margin-bottom: 20px;
+  margin-top: 20px;
+  float: right;
+  overflow: auto;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.nav a {
+  color: #0E191F;
+  text-decoration: none;
+  margin-left: 15px;
+  margin-right: 15px;
+
+}
+
+.left {
+  display: flex;
+  float: left;
+  width: 45%;
+  box-sizing: border-box;
+}
+
+
+
+.right {
+  float: right;
+  overflow: auto;
+  width: 55%;
+  box-sizing: border-box;
+  padding: 10px;
 }
 
 .bottom {
@@ -93,4 +95,45 @@ th {
   border-top: #074F57;
   border-top-style: groove;
   overflow: auto;
+  box-sizing: border-box;
+}
+
+table {
+  border: #4D6C43 1px solid;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  border-collapse: collapse;
+}
+
+th {
+  background-color: #302747;
+  color: ivory;
+  padding: 10px;
+  border-collapse: collapse;
+}
+
+td {
+  text-align: center;
+}
+
+tr:nth-child(odd) {
+  background-color: white;
+}
+
+tr:nth-child(even) {
+  background-color: #7EBDE1;
+}
+.bottom {
+  display: flex;
+  flex-direction: row;
+}
+
+.bottom img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  background-color: #D0C8B8;
+  margin-left: 10px;
+  margin-right: 10px;
 }
